--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="google-site-verification" content="uyM9Tb4ooN0cV6ddyT_mfn2X218wvCWR6bfuGxzuQbs" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <link rel="canonical" href="http://ftp.nuclearis.com/">
+    <link rel="canonical" href="http://cpanel.nuclearis.com/">
 	<link rel="amphtml" href="https://cara1002.site/wp/amp2/">
 	<link rel="icon" type="image/png" href="https://i.imgur.com/itEcaB1.png?crop=center&height=32&v=1709170164&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       Qqslot 🔥 Log Website Qqslot Terbaru 2024 Terlengkap #1 Indonesia
@@ -19,7 +19,7 @@
     
 
 <meta property="og:site_name" content="My Store">
-<meta property="og:url" content="http://ftp.nuclearis.com/">
+<meta property="og:url" content="http://cpanel.nuclearis.com/">
 <meta property="og:title" content="Qqslot 🔥 Log Website Qqslot Terbaru 2024 Terlengkap #1 Indonesia">
 <meta property="og:type" content="product">
 <meta property="og:description" content="Qqslot merupakan salah satu Situs Resmi Server Nexus Engine Dengan Dengan Berbagai Pilihan Game terlengkap No 1 indonesia. Juga menyajikan Banyak permainan Judi Slot online deposit 5000 24 Jam di Server Nexus Engine."><meta property="og:image" content="http://i.imgur.com/HzNDeaz.jpeg?v=1709185205">
@@ -34,7 +34,7 @@
     <script src="//f4d3fa-ac.myshopify.com/cdn/shop/t/1/assets/constants.js?v=58251544750838685771709169816" defer="defer"></script>
     <script src="//f4d3fa-ac.myshopify.com/cdn/shop/t/1/assets/pubsub.js?v=158357773527763999511709169824" defer="defer"></script>
     <script src="//f4d3fa-ac.myshopify.com/cdn/shop/t/1/assets/global.js?v=37284204640041572741709169818" defer="defer"></script><script src="//f4d3fa-ac.myshopify.com/cdn/shop/t/1/assets/animations.js?v=88693664871331136111709169799" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/59299037267/digital_wallets/dialog">
-<link rel="alternate" type="application/json+oembed" href="http://ftp.nuclearis.com/.oembed">
+<link rel="alternate" type="application/json+oembed" href="http://cpanel.nuclearis.com/.oembed">
 <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=f4d3fa-ac.myshopify.com&locale=en-ID"></script>
 <script async="async" src="https://shop.app/checkouts/internal/preloads.js?permanent-domain=f4d3fa-ac.myshopify.com&locale=en-ID" crossorigin="anonymous"></script>
 <script id="shopify-features" type="application/json">{"accessToken":"8aacba864b8a3fff9f91e2c1a42257df","betas":["rich-media-storefront-analytics"],"domain":"f4d3fa-ac.myshopify.com","predictiveSearch":true,"shopId":59299037267,"smart_payment_buttons_url":"https:\/\/f4d3fa-ac.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.en.js","dynamic_checkout_cart_url":"https:\/\/f4d3fa-ac.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.en.js","dynamic_checkout_cart_button_sizes":{"maxWidth":500,"minWidth":140},"locale":"en","flg4ff40b22":false}</script>
